@@ -3115,12 +3115,6 @@
     </tr>
 
     <tr>
-      <td><pre>-launcherroms &lt;1|0&gt;</pre></td>
-      <td>Specifies whether to show ROMs only (the default) or all
-        files in the ROM launcher.</td>
-    </tr>
-
-    <tr>
       <td><pre>-launcherextensions &lt;1|0&gt;</pre></td>
       <td>Display file extensions in the ROM launcher.</td>
     </tr>
